--- a/.github/workflows/github-actions-demo-push.yml
+++ b/.github/workflows/github-actions-demo-push.yml
@@ -1,4 +1,4 @@
-name: GitHub Actions Demo
+name: GitHub Actions Demo Push
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 on: 
   push:
