--- a/.github/workflows/github-actions-demo-tag-python.yml
+++ b/.github/workflows/github-actions-demo-tag-python.yml
@@ -1,8 +1,8 @@
-name: GitHub Actions Demo Push
+name: GitHub Actions Demo Tag Python
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 on: 
-  push:
-    branches: [main]
+  create:
+    tag: [v.*.*]
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
