--- a/.github/workflows/github-actions-demo-tag-python.yml
+++ b/.github/workflows/github-actions-demo-tag-python.yml
@@ -11,4 +11,5 @@ jobs:
     - uses: actions/setup-python@v5
       with:
         python-version: '3.10' 
+    - run: chmod +x my_script.py
     - run: python my_script.py
