--- a/.github/workflows/github-actions-demo-variable3.yml
+++ b/.github/workflows/github-actions-demo-variable3.yml
@@ -1,4 +1,4 @@
-name: GitHub Actions Demo variable de workflow
+name: Demo variable de workflow
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 on: [workflow_dispatch]
 env:
@@ -9,6 +9,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - run: echo Variable1: "${{ vars.VARIABLE_1 }}" 
-    - run: echo Variable2: "${{ vars.VARIABLE_2 }}" 
+    - run: echo Variable1: "${{ env.VARIABLE_1 }}" 
+    - run: echo Variable2: "${{ env.VARIABLE_2 }}" 
 	
