--- a/.github/workflows/github-actions-demo-variable3.yml
+++ b/.github/workflows/github-actions-demo-variable3.yml
@@ -9,6 +9,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - run: echo "Variable1: ${{ env.VARIABLE_1 }}" 
-    - run: echo "Variable2: ${{ env.VARIABLE_2 }}" 
+    - run: echo "${{ env.VARIABLE_1 }}" 
+    - run: echo "${{ env.VARIABLE_2 }}" 
 	
