--- a/.github/workflows/github-actions-demo-variable2.yml
+++ b/.github/workflows/github-actions-demo-variable2.yml
@@ -8,3 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - run: echo "${{ vars.VARIABLE_1 }}" 
+    - run: echo "${{ env.VARIABLE_2 }}" 
+    - run: echo "${{ env.VARIABLE_2 }}" 
+      env:
+        VARIABLE_2: Nueva variable 2
