--- a/.github/workflows/github-actions-demo-variable.yml
+++ b/.github/workflows/github-actions-demo-variable.yml
@@ -1,4 +1,4 @@
-name: Demo variable de workflow 1
+name: Demo variable de workflow
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 on: [workflow_dispatch]
 env:
@@ -7,16 +7,16 @@ jobs:
   TestVariable1:
     runs-on: ubuntu-latest
     steps:
-    - run: echo "Variable 1: ${{ vars.VARIABLE_1 }}" 
-    - run: echo "Variable 1: ${{ vars.VARIABLE_1 }}" 
-    - run: echo "Variable 2: ${{ env.VARIABLE_2 }}" 
+    - run: echo "Variable 1 - ${{ vars.VARIABLE_1 }}" 
+    - run: echo "Variable 1 - ${{ vars.VARIABLE_1 }}" 
+    - run: echo "Variable 2 - ${{ env.VARIABLE_2 }}" 
       env:
         VARIABLE_2: Nueva variable 2
-  TestVariable1:
+  TestVariable2:
     runs-on: ubuntu-latest
     steps:
-    - run: echo "Variable 1: ${{ vars.VARIABLE_1 }}" 
-    - run: echo "Variable 2: ${{ env.VARIABLE_2 }}" 
-    - run: echo "Variable 2: ${{ env.VARIABLE_2 }}" 
+    - run: echo "Variable 1 - ${{ vars.VARIABLE_1 }}" 
+    - run: echo "Variable 2 - ${{ env.VARIABLE_2 }}" 
+    - run: echo "Variable 2 - ${{ env.VARIABLE_2 }}" 
       env:
         VARIABLE_2: Nueva variable 2
