--- a/.github/workflows/github-actions-demo-push.yml
+++ b/.github/workflows/github-actions-demo-push.yml
@@ -2,7 +2,7 @@ name: GitHub Actions Demo Push
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 on: 
   push:
-    branches: [main]
+    branches: [sadrover]
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
