--- a/.github/workflows/github-actions-demo-artifact.yml
+++ b/.github/workflows/github-actions-demo-artifact.yml
@@ -20,4 +20,4 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         name: artifact
-      run: echo "Artifact - {{artifact}"
+    - run: echo "Artifact - {{artifact}"
