--- a/.github/workflows/github-actions-demo-artifact.yml
+++ b/.github/workflows/github-actions-demo-artifact.yml
@@ -14,6 +14,7 @@ jobs:
         name: artifact
         path: artifact.txt
   carga:
+    needs: guarda
     runs-on: ubuntu-latest
     steps:
     - name: Download artifact
