--- a/.github/workflows/github-actions-demo-artifact.yml
+++ b/.github/workflows/github-actions-demo-artifact.yml
@@ -21,4 +21,4 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         name: artifact
-    - run: echo "Artifact - {{artifact}"
+    - run: cat artifact.txt
