--- a/.github/workflows/github-actions-demo-secret.yml
+++ b/.github/workflows/github-actions-demo-secret.yml
@@ -9,4 +9,4 @@ jobs:
     - uses: actions/checkout@v4
     - run: apt install zip
     - run: unzip -P {{secrets.ZIP_PASS}} secret.zip   
-   
+    - run: cat secret.txt
