--- a/.github/workflows/github-actions-demo-secret.yml
+++ b/.github/workflows/github-actions-demo-secret.yml
@@ -7,6 +7,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - run: apt install zip
+    - run: sudo apt install zip
     - run: unzip -P {{secrets.ZIP_PASS}} secret.zip   
     - run: cat secret.txt
