--- a/.github/workflows/github-actions-demo-secret.yml
+++ b/.github/workflows/github-actions-demo-secret.yml
@@ -8,5 +8,5 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - run: sudo apt install zip
-    - run: unzip -P {{secrets.ZIP_PASS}} secret.zip   
+    - run: unzip -P ${{secrets.ZIP_PASS}} secret.zip   
     - run: cat secret.txt
